<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OccupiedCentralSMS</string>
    <string name="hello_world">請先按 設定，設定個人資料，有需要時請長按 發送緊急信息 ，會直接發送資料到學聯，成功會出現 已成功收到 </string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_settings">設定</string>
    <string name="hint_c_name">中文全名</string>
    <string name="hint_e_name">英文全名</string>
    <string name="hint_id">身份證號碼</string>
    <string name="hint_phone">電話號碼</string>
    <string name="hint_custom">自定義信息</string>
    <string name="settings_save">儲存設定</string>

    <string name="btn_send">發送緊急信息</string>

</resources>
