<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.billywalkerinc.occupiedcentralsms.ActivitySettings">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/hint_c_name"
        android:ems="10"
        android:id="@+id/etxtCName" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_e_name"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/etxtEName" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/hint_id"
        android:id="@+id/etxtId" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/hint_phone"
        android:id="@+id/etxtPhone"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/hint_custom"
        android:maxLines="3"
        android:id="@+id/etxtCustom"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_save"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/btnSave"/>
</LinearLayout>
